# ethglobal-istanbul

./: README.md
backend/: .dockerignore  README.md  fly.toml  package-lock.json  package.json  tsconfig.json
backend/src/: app.controller.ts  app.module.ts  main.ts  typeorm.config.ts
backend/src/.well-known/: did.json  walletconnect.txt
backend/src/artifacts/: abi.ts  umaAbi.ts
backend/src/config/: configuration.ts
backend/src/config/interfaces/: customconfig.interface.ts  envconfig.interface.ts  index.ts
backend/src/mentors/: mentor.entity.ts  mentors.controller.ts  mentors.module.ts  mentors.service.ts
backend/src/mentors/requests/: create-mentor.request.dto.ts  verify.mentor.request.dto.ts
backend/src/mentors/responses/: mentor.response.dto.ts
backend/src/migrations/: 1700250681767-initial.ts  1700339059984-assertionLink.ts  1700357748464-multichain.ts  index.ts  utils.ts
backend/src/timeslots/: .graphclientrc.yml  graph.ts  query.graphql  sendPush.ts  timeslot.entity.ts  timeslots.controller.ts  timeslots.module.ts  timeslots.service.ts  types.ts
backend/src/timeslots/requests/: book-slot.request.dto.ts  complete-slot.request.dto.ts
backend/src/timeslots/responses/: timeslot.response.dto.ts
backend/src/web3/: consts.ts  web3Provider.ts
backend/src/zoom/: types.ts  utils.ts  zoom.controller.ts  zoom.module.ts  zoom.service.ts
chain/: README.md  hardhat.config.ts  package-lock.json  package.json
chain/contracts/: MentorsTime.sol  MindShare.sol
chain/contracts/eas/: MindShareEASAttester.sol
chain/contracts/helpers/: OptimisticOracle.sol
chain/contracts/interfaces/: BaseVerificator.sol  IAttester.sol
chain/contracts/mocks/: AttesterMock.sol
chain/contracts/oracle/: MeetingDurationFunctionsConsumer.sol  OptimisticOracleMeetingFinished.sol
chain/contracts/verificators/: BaseMindVerificator.sol  PolygonIdVerificator.sol  TlsnVerificator.sol  WorldIdVerificator.sol
chain/scripts/: consts.ts  deploy-basegoerli.ts  deploy-gnosisChiado.ts  deploy-mumbai.ts  deploy-scroll.ts  deploy-sepolia.ts  deploy-zkEvmTestnet.ts  deploy.ts  test_tlsn.ts  tests.ts
chain/test/: MindShare.ts
thegraph/: MindShare.abi
thegraph/mindshare/: networks.json  package.json  schema.graphql  subgraph.yaml
thegraph/mindshare/abis/: MindShare.json
thegraph/mindshare/src/: mind-share.ts
thegraph/mindshare/tests/: mind-share-utils.ts  mind-share.test.ts
thegraph/mindshare_eth/: package.json  subgraph.yaml
thegraph/mindshare_sepolia/: networks.json  package.json
thegraph/mindshare_sepolia/tests/: mind-share-utils.ts  mind-share.test.ts
tls/: README.md  Taskfile.yml
tls/ext/: .gitignore  Taskfile.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
tls/ext/src/: manifest.ts
tls/ext/src/pages/background/: index.ts
tls/ext/src/pages/client/: hack_client.d.ts  hack_client.js  hack_client_bg.wasm  hack_client_bg.wasm.d.ts  package.json
tls/ext/src/pages/content/: index.tsx
tls/ext/src/pages/msg/: msg.ts
tls/ext/src/pages/popup/: Popup.tsx  index.css
tls/ext/src/pages/source/: hack_source.d.ts  hack_source.js  hack_source_bg.wasm  hack_source_bg.wasm.d.ts  package.json
tls/ext/src/pages/worker/: worker.ts
tls/ext/utils/: constants.ts
tls/ext/utils/plugins/: build-content-script.ts
tls/rust/: .gitignore  Cargo.toml  Taskfile.docker.yml  Taskfile.yml
tls/rust/client/: Cargo.toml  Taskfile.yml  rust-toolchain
tls/rust/client/src/: lib.rs
tls/rust/docker/: notary.Dockerfile  notary.Dockerfile.dockerignore  proxy.Dockerfile  proxy.Dockerfile.dockerignore  verifier.Dockerfile  verifier.Dockerfile.dockerignore
tls/rust/fixture/: debug-notary.key  debug-notary.pub  debug-verifier.key  debug-verifier.pub
tls/rust/notary/: fork-params.env  notary-config.yml
tls/rust/proxy/: Cargo.toml  Taskfile.yml
tls/rust/proxy/src/: main.rs
tls/rust/source/: Cargo.toml  Taskfile.yml
tls/rust/source/src/: lib.rs
tls/rust/verifier/: Cargo.toml  Taskfile.yml
tls/rust/verifier/src/: main.rs
webapp/: .dockerignore  Dockerfile  README.md  fly.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webapp/server/: app.js  package-lock.json  package.json
webapp/src/: App.tsx  main.tsx  polyfills.ts  types.ts  web3configs.ts
webapp/src/artifacts/: abi.ts
webapp/src/components/: BookedList.tsx  CardsList.tsx  Header.tsx  MentorDetails.tsx  Profile.tsx
webapp/src/screens/: CardsList.tsx
webapp/src/web3/: consts.ts  contracts.ts
zoomapp/: README.md  app.js  package-lock.json  package.json
zoomapp/public/js/: index.js
zoomapp/public/js/lib/: assistant.js  immersive-app.js
zoomapp/server/views/: index.pug  layout.pug
