[workspace]
members = [
  "proxy",
  "source",
]
resolver = "2"


[workspace.package]
edition = "2021"
repository = "https://github.com/abdtimur/ethglobal-istanbul"
rust-version = "1.73"


[workspace.dependencies]
bytes = "1.5"
env_logger = "0.10"
eyre = "0.6"
futures = "0.3"
futures-channel = "0.3"
futures-io = "0.3"
futures-util = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tungstenite = "0.20"
url = "2.4"
