[package]
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

name = "hack_proxy"
version = "0.1.0"

[dependencies]
hack_source = { path = "../source" }

bytes.workspace = true
env_logger.workspace = true
eyre.workspace = true
futures-channel.workspace = true
futures-io.workspace = true
futures-util.workspace = true
futures.workspace = true
log.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tungstenite.workspace = true
url.workspace = true

byteorder = "1.5"
